feat(scripts): update

--- a/scripts/language/en-US.json
+++ b/scripts/language/en-US.json
@@ -1,13 +1,6 @@
 {
-  "need-pwsh": "Require PowerShell Core (pwsh 7+).",
   "import-psc": "Before running this script, you should install the PSCompletions module and import it.",
   "compare-json": {
-    "invalidParams": [
-      "<@Yellow>You should enter available json path or completion name.\n",
-      "e.g. <@Magenta>.\\scripts\\compare-json.ps1 psc\n",
-      "     .\\scripts\\compare-json.ps1 .\\completions\\psc\\language\\zh-CN.json\n",
-      "     .\\scripts\\compare-json.ps1 .\\completions\\psc\\language\\zh-CN.json .\\completions\\psc\\language\\en-US.json"
-    ],
     "progress": "<@Blue>Progress: <@Magenta>{{ $completionRate }}%",
     "hr": [
       "<@Cyan>--------------------"
@@ -23,7 +16,7 @@
     ],
     "diffList": {
       "tip": [
-        "\n<@Yellow>The following are different property values or types (count: <@Magenta>{{ $count.diffList.Count }}<@Yellow>):"
+        "\n<@Red>The following are different values or types:"
       ],
       "base": [
         "<@Cyan>{{ $baseShortPath }}: <@Magenta>{{ $item.base }}"
@@ -34,23 +27,7 @@
     },
     "untranslatedList": {
       "tip": [
-        "\n<@Yellow>The following tips are not translated (count: <@Magenta>{{ $count.untranslatedList.Count }}<@Yellow>):"
-      ]
-    },
-    "missingList": {
-      "tip": [
-        "<@Red>The following tips are missing property in the <@Magenta>{{ $diffShortPath }}<@Red> file (count: <@Magenta>{{ $count.missingList.Count }}<@Red>):"
-      ],
-      "pos": [
-        "<@Cyan>--------------------<@Magenta>\n{{ $item.pos }}"
-      ]
-    },
-    "extraList": {
-      "tip": [
-        "<@Red>The following tips are extra property in the <@Magenta>{{ $diffShortPath }}<@Red> file (count: <@Magenta>{{ $count.extraList.Count }}<@Red>):"
-      ],
-      "pos": [
-        "<@Cyan>--------------------<@Magenta>\n{{ $item.pos }}"
+        "\n<@Yellow>The following values are not translated:"
       ]
     }
   },
