--- a/scripts/language/zh-CN.json
+++ b/scripts/language/zh-CN.json
@@ -1,13 +1,6 @@
 {
-  "need-pwsh": "这个脚本需要 PowerShell Core (pwsh 7+) 才能运行。",
   "import-psc": "在运行此脚本前，你应该安装 PSCompletions 模块并导入它。",
   "compare-json": {
-    "invalidParams": [
-      "<@Yellow>你应该输入一个有效的 json 路径或补全名称。\n",
-      "e.g. <@Magenta>.\\scripts\\compare-json.ps1 psc\n",
-      "     .\\scripts\\compare-json.ps1 .\\completions\\psc\\language\\zh-CN.json\n",
-      "     .\\scripts\\compare-json.ps1 .\\completions\\psc\\language\\zh-CN.json .\\completions\\psc\\language\\en-US.json"
-    ],
     "progress": "<@Blue>完成进度: <@Magenta>{{ $completionRate }}%",
     "hr": [
       "<@Cyan>--------------------"
@@ -23,7 +16,7 @@
     ],
     "diffList": {
       "tip": [
-        "\n<@Yellow>以下是不同的属性值或类型(个数: <@Magenta>{{ $count.diffList.Count }}<@Yellow>):"
+        "\n<@Red>不同的属性值或类型:"
       ],
       "base": [
         "<@Cyan>{{ $baseShortPath }}: <@Magenta>{{ $item.base }}"
@@ -34,23 +27,7 @@
     },
     "untranslatedList": {
       "tip": [
-        "\n<@Yellow>以下是未翻译的提示(个数: <@Magenta>{{ $count.untranslatedList.Count }}<@Yellow>):"
-      ]
-    },
-    "missingList": {
-      "tip": [
-        "<@Red>以下是 <@Magenta>{{ $diffShortPath }}<@Red> 文件中缺失的属性(个数: <@Magenta>{{ $count.missingList.Count }}<@Red>):"
-      ],
-      "pos": [
-        "<@Cyan>--------------------<@Magenta>\n{{ $item.pos }}"
-      ]
-    },
-    "extraList": {
-      "tip": [
-        "<@Red>以下是 <@Magenta>{{ $diffShortPath }}<@Red> 文件中多余的属性(个数: <@Magenta>{{ $count.extraList.Count }}<@Red>):"
-      ],
-      "pos": [
-        "<@Cyan>--------------------<@Magenta>\n{{ $item.pos }}"
+        "\n<@Yellow>未翻译的属性值:"
       ]
     }
   },
