--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -27,6 +27,12 @@
           ]
         },
         {
+          "name": "--renormalize",
+          "tip": [
+            "renormalize EOL of tracked files (implies -u)"
+          ]
+        },
+        {
           "name": "-A",
           "alias": [
             "--all"
