--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -176,22 +176,6 @@
           ]
         },
         {
-          "name": "function_name",
-          "tip": [
-            "当前值: {{ $PSCompletions.config.function_name }} (默认值: PSCompletions)",
-            "设置模块导出的核心函数名。",
-            "当你需要定义一个函数，且必须命名为 PSCompletions 时，你可以通过此配置修改 PSCompletions 模块默认导出的函数名以解决冲突。"
-          ],
-          "next": [
-            {
-              "name": "PSCompletions",
-              "tip": [
-                "设置为 PSCompletions (默认值)"
-              ]
-            }
-          ]
-        },
-        {
           "name": "language",
           "tip": [
             "当前值: {{ $PSCompletions.language }}",
@@ -794,7 +778,8 @@
               "name": "trigger_key",
               "tip": [
                 "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.trigger_key) }} (默认值: \"Tab\")",
-                "设置触发补全的按键。"
+                "设置触发补全的按键。",
+                "它会使用 Set-PSReadLineKeyHandler 进行按键绑定。"
               ],
               "next": [
                 {
@@ -2342,13 +2327,6 @@
         "E: psc config language               --- 获取语言设置\n",
         "   psc config language en-US         --- 设置为英文"
       ],
-      "function_name": {
-        "err": "<@Magenta>{{ $config_item }}<@Yellow> 配置项需要一个值, 且它不是已存在的命令",
-        "example": [
-          "E: psc config function_name                   --- 获取当前使用的函数名\n",
-          "   psc config function_name PSCompletions     --- 设置函数名"
-        ]
-      },
       "language": {
         "err": "<@Magenta>{{ $config_item }}<@Yellow> 配置项只需要一个值, 像 <@Magenta>zh-CN<@Yellow> 这样的区域语言标识符",
         "example": [
@@ -2388,7 +2366,7 @@
       "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
       "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> 命令简单, 输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
+      "输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
       "\n",
       "<@Blue>PSCompletions<@Cyan> 有一个非常强大的补全菜单\n",
       "  - 在这个补全菜单中，你可以输入字符进行过滤，支持三个匹配符:\n",
@@ -2404,9 +2382,9 @@
       "    - 选择上一个补全项:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
       "    - 选择下一个补全项: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> 模块只会占用两个全局命名\n",
-      "  <@Magenta>PSCompletions<@Cyan>: 函数名, 模块导出的核心函数 (<@Magenta>psc<@Cyan> 其实就是它的别名)\n",
-      " <@Magenta>$PSCompletions<@Cyan>: 变量名, 存储模块相关的所有数据 (<@Yellow>你不能修改它<@Cyan>)\n",
+      "<@Blue>PSCompletions<@Cyan> 模块只会占用两个全局命名，<@Yellow>你不能修改或覆盖它们<@Cyan>\n",
+      "  <@Magenta>PSCompletions<@Cyan>: 函数名, 模块导出的核心函数，<@Magenta>psc<@Cyan> 是它的别名\n",
+      " <@Magenta>$PSCompletions<@Cyan>: 变量名, 存储模块的相关数据\n",
       "\n",
       "更多相关信息, 请访问:\n",
       "  Website : <@Blue>https://pscompletions.abgox.com<@Cyan>\n",
@@ -2415,7 +2393,7 @@
       "\n",
       "如果有使用问题, 请提交 issue: https://github.com/abgox/PSCompletions/issues\n",
       "\n",
-      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@>"
+      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目一个 <@Yellow>Star<@Cyan>"
     ],
     "description": [
       "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理器\n",
