feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -450,7 +450,7 @@
           "hide": true,
           "next": [
             {
-              "name": "\"^https://github.com|||^https://raw.githubusercontent.com\"",
+              "name": "\"^https://github.com|^https://raw.githubusercontent.com\"",
               "tip": [
                 "Replace URLs starting with https://github.com and https://raw.githubusercontent.com"
               ]
@@ -462,7 +462,7 @@
           "hide": true,
           "next": [
             {
-              "name": "\"https://gh-proxy.com/github.com|||https://gh-proxy.com/raw.githubusercontent.com\"",
+              "name": "\"https://gh-proxy.com/github.com|https://gh-proxy.com/raw.githubusercontent.com\"",
               "tip": [
                 "Replace with https://gh-proxy.com/github.com and https://gh-proxy.com/raw.githubusercontent.com"
               ]
