--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -449,7 +449,7 @@
           "hide": true,
           "next": [
             {
-              "name": "\"^https://github.com|||^https://raw.githubusercontent.com\"",
+              "name": "\"^https://github.com|^https://raw.githubusercontent.com\"",
               "tip": [
                 "替换以 https://github.com 和 https://raw.githubusercontent.com 开头的 URL"
               ]
@@ -461,7 +461,7 @@
           "hide": true,
           "next": [
             {
-              "name": "\"https://gh-proxy.com/github.com|||https://gh-proxy.com/raw.githubusercontent.com\"",
+              "name": "\"https://gh-proxy.com/github.com|https://gh-proxy.com/raw.githubusercontent.com\"",
               "tip": [
                 "替换为 https://gh-proxy.com/github.com 和 https://gh-proxy.com/raw.githubusercontent.com"
               ]
