feat(completions): update jj

--- a/completions/jj/language/en-US.json
+++ b/completions/jj/language/en-US.json
@@ -24,6 +24,13 @@
           "tip": [
             "Do not delete bookmarks pointing to the revisions to abandon"
           ]
+        },
+        {
+          "name": "-r",
+          "tip": [
+            "The revision(s) to abandon (default: @)"
+          ],
+          "next": []
         }
       ]
     },
@@ -42,17 +49,20 @@
           "tip": [
             "U: -f, --from <REVSET>",
             "Source revision to absorb from [default: @]"
-          ]
+          ],
+          "next": []
         },
         {
           "name": "-t",
           "alias": [
+            "--to",
             "--into"
           ],
           "tip": [
-            "U: -t, --into <REVSETS>",
+            "U: -t, --to, --into <REVSETS>",
             "Destination revisions to absorb into [default: mutable()]"
-          ]
+          ],
+          "next": []
         }
       ]
     },
