--- a/completions/jj/language/zh-CN.json
+++ b/completions/jj/language/zh-CN.json
@@ -24,6 +24,13 @@
           "tip": [
             "不删除指向要放弃的修订版本的书签"
           ]
+        },
+        {
+          "name": "-r",
+          "tip": [
+            "要放弃的修订版本 [默认: @]"
+          ],
+          "next": []
         }
       ]
     },
@@ -42,17 +49,20 @@
           "tip": [
             "U: -f, --from <REVSET>",
             "要从中吸收变更的源修订版本 [默认: @]"
-          ]
+          ],
+          "next": []
         },
         {
           "name": "-t",
           "alias": [
+            "--to",
             "--into"
           ],
           "tip": [
-            "U: -t, --into <REVSETS>",
+            "U: -t, --to, --into <REVSETS>",
             "要吸收变更的目标修订版本 [默认: mutable()]"
-          ]
+          ],
+          "next": []
         }
       ]
     },
