feat(completions): update git

--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -29,7 +29,7 @@
         {
           "name": "--renormalize",
           "tip": [
-            "renormalize EOL of tracked files (implies -u)"
+            "将跟踪的文件的行尾符（EOL）标准化（implies -u）"
           ]
         },
         {
@@ -1718,19 +1718,19 @@
     {
       "name": "lfs",
       "tip": [
-        "Work with large files in Git repositories."
+        "处理 Git 仓库中的大文件。"
       ],
       "next": [
         {
           "name": "checkout",
           "tip": [
-            "Populate working copy with real content from Git LFS files."
+            "从 Git LFS 文件中填充工作副本的实际内容。"
           ]
         },
         {
           "name": "completion",
           "tip": [
-            "Generate shell scripts for command-line tab-completion of Git LFS commands."
+            "为 Git LFS 命令生成 shell 脚本，用于命令行补全。"
           ],
           "next": [
             {
@@ -1747,127 +1747,127 @@
         {
           "name": "dedup",
           "tip": [
-            "De-duplicate Git LFS files."
+            "去重 Git LFS 文件。"
           ]
         },
         {
           "name": "env",
           "tip": [
-            "Display the Git LFS environment."
+            "显示 Git LFS 环境的详细信息。"
           ]
         },
         {
           "name": "ext",
           "tip": [
-            "Display Git LFS extension details."
+            "显示 Git LFS 扩展的详细信息。"
           ]
         },
         {
           "name": "fetch",
           "tip": [
-            "Download Git LFS files from a remote."
+            "从远程下载 Git LFS 文件。"
           ]
         },
         {
           "name": "fsck",
           "tip": [
-            "Check Git LFS files for consistency."
+            "检查 Git LFS 文件的一致性。"
           ]
         },
         {
           "name": "install",
           "tip": [
-            "Install Git LFS configuration."
+            "安装 Git LFS 配置。"
           ]
         },
         {
           "name": "lock",
           "tip": [
-            "Set a file as \"locked\" on the Git LFS server."
+            "为文件设置 \"locked\" 状态，防止其他用户修改。"
           ]
         },
         {
           "name": "locks",
           "tip": [
-            "List currently \"locked\" files from the Git LFS server."
+            "列出当前来自 Git LFS 服务器的 \"locked\" 文件"
           ]
         },
         {
           "name": "logs",
           "tip": [
-            "Show errors from the Git LFS command."
+            "显示 Git LFS 命令的错误信息。"
           ]
         },
         {
           "name": "ls-files",
           "tip": [
-            "Show information about Git LFS files in the index and working tree."
+            "显示 Git LFS 文件在索引和工作树中的信息。"
           ]
         },
         {
           "name": "migrate",
           "tip": [
-            "Migrate history to or from Git LFS."
+            "将历史迁移到或从 Git LFS 中。"
           ]
         },
         {
           "name": "prune",
           "tip": [
-            "Delete old Git LFS files from local storage."
+            "删除本地存储中的旧 Git LFS 文件。"
           ]
         },
         {
           "name": "pull",
           "tip": [
-            "Fetch Git LFS changes from the remote & checkout any required working tree files."
+            "从远程下载 Git LFS 文件并检出任何需要的工作树文件。"
           ]
         },
         {
           "name": "push",
           "tip": [
-            "Push queued large files to the Git LFS endpoint."
+            "将队列中的大文件推送到 Git LFS 服务器。"
           ]
         },
         {
           "name": "status",
           "tip": [
-            "Show the status of Git LFS files in the working tree."
+            "显示工作树中 Git LFS 文件的状态。"
           ]
         },
         {
           "name": "track",
           "tip": [
-            "View or add Git LFS paths to Git attributes."
+            "查看或添加 Git LFS 路径到 Git 属性中。"
           ]
         },
         {
           "name": "uninstall",
           "tip": [
-            "Uninstall Git LFS by removing hooks and smudge/clean filter configuration."
+            "卸载 Git LFS 并移除钩子和 smudge/clean 过滤器配置。"
           ]
         },
         {
           "name": "unlock",
           "tip": [
-            "Remove \"locked\" setting for a file on the Git LFS server."
+            "为文件移除 \"locked\" 状态，允许其他用户修改。"
           ]
         },
         {
           "name": "untrack",
           "tip": [
-            "Remove Git LFS paths from Git Attributes."
+            "从 Git 属性中移除 Git LFS 路径。"
           ]
         },
         {
           "name": "update",
           "tip": [
-            "Update Git hooks for the current Git repository."
+            "更新当前 Git 仓库的 Git 钩子。"
           ]
         },
         {
           "name": "version",
           "tip": [
-            "Report the version number."
+            "显示 Git LFS 版本号。"
           ]
         }
       ]
@@ -1882,6 +1882,12 @@
           "name": "--abbrev-commit",
           "tip": [
             "仅显示 SHA-1 校验和的前几个字符, 而不是全部的 40 个字符"
+          ]
+        },
+        {
+          "name": "--all",
+          "tip": [
+            "假设 refs/ 中的所有引用以及 HEAD 都作为 <commit> 在命令行中列出。"
           ]
         },
         {
