--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -1886,6 +1886,12 @@
           ]
         },
         {
+          "name": "--all",
+          "tip": [
+            "Pretend as if all the refs in refs/, along with HEAD, are listed on the command line as <commit>."
+          ]
+        },
+        {
           "name": "--graph",
           "tip": [
             "Display branch and merge history in ASCII art alongside the log."
