feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -326,6 +326,12 @@
                   "tip": [
                     "Set \" \" (Default)"
                   ]
+                },
+                {
+                  "name": "\"\"",
+                  "tip": [
+                    "Set \" \""
+                  ]
                 }
               ]
             },
