--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -327,6 +327,12 @@
                   "tip": [
                     "设置为 \" \" (默认值)"
                   ]
+                },
+                {
+                  "name": "\"\"",
+                  "tip": [
+                    "设置为 \"\""
+                  ]
                 }
               ]
             },
