feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2,8 +2,7 @@
   "meta": {
     "url": "https://pscompletions.abgox.com",
     "description": [
-      "PSCompletions module's completion tips.",
-      "It can only be updated, not removed.",
+      "PSCompletions module's completion.",
       "If removed, it will be automatically added again."
     ]
   },
@@ -2380,7 +2379,7 @@
       "\n",
       "Enter <@Magenta>psc<@Cyan>, press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key, you will quickly learn all usages by reading the completion tip.\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> has a more powerful completion menu.\n",
+      "<@Blue>PSCompletions<@Cyan> has a more powerful completion menu. <@Yellow>(Currently only available on Windows)<@Cyan>\n",
       "  - You can enter characters to filter, and three matching symbols are supported:\n",
       "    - <@Magenta>^<@Cyan>: Match the beginning.\n",
       "    - <@Magenta>?<@Cyan>: Match any single character.\n",
