--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2,8 +2,7 @@
   "meta": {
     "url": "https://pscompletions.abgox.com",
     "description": [
-      "PSCompletions 模块的补全提示",
-      "它只能更新，不能移除",
+      "PSCompletions 模块的补全",
       "如果移除它，将会自动重新添加"
     ]
   },
@@ -2374,7 +2373,7 @@
       "\n",
       "输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> 有一个非常强大的补全菜单\n",
+      "<@Blue>PSCompletions<@Cyan> 有一个非常强大的补全菜单 <@Yellow>(目前仅 Windows 可用)<@Cyan>\n",
       "  - 在这个补全菜单中，你可以输入字符进行过滤，支持三个匹配符:\n",
       "    - <@Magenta>^<@Cyan>: 匹配开头\n",
       "    - <@Magenta>?<@Cyan>: 匹配一个任意字符\n",
