feat(completions): update psc

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -181,7 +181,7 @@
             "读取/设置当前配置语言。",
             "配置语言会影响所有添加的补全。",
             "通过 psc completion 单独设置了语言的补全不受影响。",
-            "参考: https://gitee.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于语言"
+            "参考: https://pscompletions.abgox.com/faq/language"
           ],
           "next": [
             {
@@ -271,7 +271,7 @@
         {
           "name": "color_theme",
           "tip": [
-            "切换补全菜单的内置颜色主题。",
+            "切换模块补全菜单的内置颜色主题。",
             "你也可以通过 psc menu custom color 下的命令来自定义。",
             "{{ $info.menu.color_theme.example }}"
           ],
@@ -379,21 +379,21 @@
               "name": "enable_enter_when_single",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_enter_when_single }} (默认值: 0)",
-                "当候选补全项只有一个时, 是否直接输入, 而不是显示补全菜单。"
+                "当候选补全项只有一个时, 是否直接输入, 而不是显示模块补全菜单。"
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "设置为 0 (默认值)",
-                    "即使只有一个候选补全项, 也会先显示菜单, 此时, 你可以再次按下 Tab 或 空格键输入此候选补全项。"
+                    "即使只有一个候选补全项, 也会先显示模块补全菜单, 此时, 你可以再次按下 Tab 或 空格键输入此候选补全项。"
                   ]
                 },
                 {
                   "name": "1",
                   "tip": [
                     "设置为 1",
-                    "当候选补全项只有一个时, 会直接输入, 不会显示补全菜单。"
+                    "当候选补全项只有一个时, 会直接输入, 不会显示模块补全菜单。"
                   ]
                 }
               ]
@@ -425,7 +425,7 @@
               "name": "enable_list_follow_cursor",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_list_follow_cursor }} (默认值: 1)",
-                "设置补全菜单列表是否跟随输入光标显示。",
+                "设置模块补全菜单的列表是否跟随输入光标显示。",
                 "如果 enable_list_full_width 为 1，则它无效。"
               ],
               "next": [
@@ -449,23 +449,23 @@
               "name": "enable_list_full_width",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_list_full_width }} (默认值: 1)",
-                "设置补全菜单列表是否铺满窗口宽度。",
-                "启用它，补全菜单的性能会更好。"
+                "设置模块补全菜单的列表是否铺满窗口宽度。",
+                "启用它，模块补全菜单的性能会更好。"
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "设置为 0",
-                    "补全菜单列表不铺满窗口宽度。"
+                    "模块补全菜单的列表不铺满窗口宽度。"
                   ]
                 },
                 {
                   "name": "1",
                   "tip": [
                     "设置为 1 (默认值)",
-                    "补全菜单列表铺满窗口宽度。",
-                    "启用它，补全菜单的性能会更好。"
+                    "模块补全菜单的列表铺满窗口宽度。",
+                    "启用它，模块补全菜单的性能会更好。"
                   ]
                 }
               ]
@@ -474,21 +474,21 @@
               "name": "enable_list_loop",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_list_loop }} (默认值: 1)",
-                "设置补全菜单列表是否循环显示。"
+                "设置模块补全菜单的列表是否循环显示。"
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "设置为 0",
-                    "补全菜单列表不循环显示。"
+                    "模块补全菜单的列表不循环显示。"
                   ]
                 },
                 {
                   "name": "1",
                   "tip": [
                     "设置为 1 (默认值)",
-                    "补全菜单列表循环显示。"
+                    "模块补全菜单的列表循环显示。"
                   ]
                 }
               ]
@@ -497,8 +497,8 @@
               "name": "enable_menu",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_menu }} (默认值: 1)",
-                "设置是否使用 PSCompletions 模块提供的补全菜单。",
-                "如果你不是在 Windows 系统下使用 PowerShell(pwsh), 你无法使用模块提供的补全菜单, 此配置无效。"
+                "设置是否使用 PSCompletions 提供的模块补全菜单。",
+                "非 Windows 系统无法使用模块补全菜单, 此配置无效。"
               ],
               "next": [
                 {
@@ -512,7 +512,7 @@
                   "name": "1",
                   "tip": [
                     "设置为 1 (默认值)",
-                    "使用 PSCompletions 模块提供的补全菜单。"
+                    "使用 PSCompletions 提供的模块补全菜单。"
                   ]
                 }
               ]
@@ -521,9 +521,8 @@
               "name": "enable_menu_enhance",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_menu_enhance }} (默认值: 1)",
-                "设置是否增强补全菜单的功能。",
-                "参考: https://github.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强",
-                "      https://gitee.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强"
+                "设置是否增强模块补全菜单的功能。",
+                "参考: https://pscompletions.abgox.com/faq/menu-enhance"
               ],
               "next": [
                 {
@@ -594,7 +593,7 @@
               "name": "enable_tip_follow_cursor",
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_tip_follow_cursor }} (默认值: 1)",
-                "设置补全菜单命令提示信息是否跟随输入光标显示。",
+                "设置模块补全菜单的命令提示信息是否跟随输入光标显示。",
                 "如果 enable_list_full_width 为 1，则它无效。"
               ],
               "next": [
@@ -641,7 +640,7 @@
               "name": "filter_symbol",
               "tip": [
                 "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.filter_symbol) }} (默认值: \"[]\")",
-                "设置顶部边框上的过滤区域, 左侧和右侧的符号。",
+                "设置模块补全菜单的顶部边框上的过滤区域, 左侧和右侧的符号。",
                 "设置此配置项需要两个字符。"
               ],
               "next": [
@@ -657,7 +656,7 @@
               "name": "height_from_menu_bottom_to_cursor_when_above",
               "tip": [
                 "当前值: {{ $PSCompletions.config.height_from_menu_bottom_to_cursor_when_above }} (默认值: 0)",
-                "设置当补全菜单显示在上方时, 菜单底部和光标之间的高度。",
+                "设置当模块补全菜单显示在上方时, 菜单底部和光标之间的高度。",
                 "通常会设置它去跳过提示符主题 (oh-my-posh/starship/...) 所在的行，避免重绘差异。"
               ],
               "next": [
@@ -688,7 +687,7 @@
               "name": "height_from_menu_top_to_cursor_when_below",
               "tip": [
                 "当前值: {{ $PSCompletions.config.height_from_menu_top_to_cursor_when_below }} (默认值: 0)",
-                "设置当补全菜单显示在下方时, 菜单顶部和光标之间的高度。"
+                "设置当模块补全菜单显示在下方时, 菜单顶部和光标之间的高度。"
               ],
               "next": [
                 {
@@ -718,7 +717,7 @@
               "name": "list_max_count_when_above",
               "tip": [
                 "当前值: {{ $PSCompletions.config.list_max_count_when_above }} (默认值: 0)",
-                "设置当补全菜单显示在光标上方时, 第一页显示的补全项的最大个数。",
+                "设置当模块补全菜单显示在光标上方时, 第一页显示的补全项的最大个数。",
                 "如果值为 0, 则表示它由 PSCompletions 自行决定"
               ],
               "next": [
@@ -735,7 +734,7 @@
               "name": "list_max_count_when_below",
               "tip": [
                 "当前值: {{ $PSCompletions.config.list_max_count_when_below }} (默认值: 0)",
-                "设置当补全菜单显示在光标下方时, 第一页显示的补全项的最大个数。",
+                "设置当模块补全菜单显示在光标下方时, 第一页显示的补全项的最大个数。",
                 "如果值为 0, 则表示它由 PSCompletions 自行决定"
               ],
               "next": [
@@ -752,7 +751,7 @@
               "name": "list_min_width",
               "tip": [
                 "当前值: {{ $PSCompletions.config.list_min_width }} (默认值: 10)",
-                "设置补全菜单中, 补全项区域的最小宽度。",
+                "设置模块补全菜单中, 补全项区域的最小宽度。",
                 "如果 enable_list_full_width 为 1，则它无效。"
               ],
               "next": [
@@ -768,7 +767,7 @@
               "name": "status_symbol",
               "tip": [
                 "当前值: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.status_symbol) }} (默认值: \"/\")",
-                "设置底部边框上的补全个数显示区域, 当前补全数以及总补全数之间的间隔符。"
+                "设置模块补全菜单的底部边框上的补全个数显示区域, 当前补全数以及总补全数之间的间隔符。"
               ],
               "next": [
                 {
@@ -1502,14 +1501,14 @@
         {
           "name": "custom",
           "tip": [
-            "自定义补全菜单的样式。",
+            "自定义模块补全菜单的样式。",
             "{{ $info.menu.custom.example }}"
           ],
           "next": [
             {
               "name": "color",
               "tip": [
-                "颜色相关的自定义配置。"
+                "模块补全菜单的颜色相关的自定义配置。"
               ],
               "next": [
                 {
@@ -1573,7 +1572,7 @@
             {
               "name": "line",
               "tip": [
-                "补全菜单的边框线相关的自定义配置。"
+                "模块补全菜单的边框线相关的自定义配置。"
               ],
               "next": [
                 {
@@ -1793,7 +1792,7 @@
         {
           "name": "line_theme",
           "tip": [
-            "切换补全菜单的内置边框样式主题。",
+            "切换模块补全菜单的内置边框样式主题。",
             "你也可以通过 psc menu custom line 下的命令来自定义。",
             "{{ $info.menu.line_theme.example }}"
           ],
@@ -1875,10 +1874,10 @@
         {
           "name": "symbol",
           "tip": [
-            "设置补全项中的特殊符号(~?!)。",
+            "设置补全项中的补全预测符号(~?!)。",
             "只有通过 psc add 添加的补全中存在这些符号。",
             "这些符号是为了让你能够直观感知到是否可以继续获取补全。",
-            "详情: https://pscompletions.abgox.com/command/#menu-symbol"
+            "详情: https://pscompletions.abgox.com/faq/completion-predict-symbol"
           ],
           "next": [
             {
@@ -2023,7 +2022,7 @@
             {
               "name": "color",
               "tip": [
-                "重置补全菜单的颜色相关的配置项。",
+                "重置模块补全菜单的颜色相关的配置项。",
                 "包含 psc menu custom color 命令下的所有配置项。"
               ]
             },
@@ -2037,7 +2036,7 @@
             {
               "name": "line",
               "tip": [
-                "重置补全菜单边框线条相关的配置项。",
+                "重置模块补全菜单的边框线条相关的配置项。",
                 "包含 psc menu custom line 命令下的所有配置项。"
               ]
             },
@@ -2373,17 +2372,17 @@
       "\n",
       "输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> 有一个非常强大的补全菜单 <@Yellow>(目前仅 Windows 可用)<@Cyan>\n",
-      "  - 在这个补全菜单中，你可以输入字符进行过滤，支持三个匹配符:\n",
+      "<@Blue>PSCompletions<@Cyan> 提供了一个可滚动的模块补全菜单 <@Yellow>(目前仅 Windows 可用)<@Cyan>\n",
+      "  - 在模块补全菜单中，你可以输入字符进行过滤，支持三个匹配符:\n",
       "    - <@Magenta>^<@Cyan>: 匹配开头\n",
       "    - <@Magenta>?<@Cyan>: 匹配一个任意字符\n",
       "    - <@Magenta>*<@Cyan>: 匹配一个或多个任意字符\n",
-      "  - 以下是补全菜单的按键绑定:\n",
+      "  - 以下是模块补全菜单的按键绑定:\n",
       "    - 选用当前选中的补全项: <@Magenta>Enter<@Cyan> (回车) | <@Magenta>Space<@Cyan> (空格)\n",
       "        - 当只有一个补全项时，也可以使用 <@Magenta>Tab<@Cyan>\n",
       "    - 删除过滤字符: <@Magenta>Backspace<@Cyan> (退格)\n",
-      "    - 退出补全菜单: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
-      "        - 当过滤区域没有字符时，也可以使用 <@Magenta>Backspace<@Cyan> (退格) 退出补全菜单\n",
+      "    - 退出模块补全菜单: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
+      "        - 当过滤区域没有字符时，也可以使用 <@Magenta>Backspace<@Cyan> (退格)\n",
       "    - 选择上一个补全项:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
       "    - 选择下一个补全项: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
       "\n",
@@ -2410,7 +2409,7 @@
         "<@Yellow>别名 <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> 已经存在，请手动处理别名冲突"
       ],
       "deny_change_menu_line_style": [
-        "<@Red>在 Windows PowerShell 5.1 中，由于它的渲染问题，不能修改补全菜单的边框线条样式。\n",
+        "<@Red>在 Windows PowerShell 5.1 中，由于它的渲染问题，不能修改模块补全菜单的边框线条样式。\n",
         "建议使用 PowerShell(pwsh)，它没有这样的限制。"
       ],
       "has_wildcard": [
@@ -2454,7 +2453,7 @@
         "example": [
           "E: psc menu config enable_enter_when_single 1     --- 只有一个补全项时自动应用\n",
           "   psc menu config enable_tip 0                   --- 不显示补全提示信息\n",
-          "   psc menu config enable_menu 0                  --- 禁用模块提供的补全菜单\n",
+          "   psc menu config enable_menu 0                  --- 禁用模块补全菜单\n",
           "   psc menu config filter_symbol []               --- 设置过滤区域(左上角), 左侧和右侧的符号, 默认为 []"
         ]
       },
@@ -2593,7 +2592,7 @@
         "example": [
           "E: psc reset menu *              --- 重置所有补全菜单配置\n",
           "   psc reset menu config         --- 重置补全菜单的自定义配置\n",
-          "   psc reset menu line_theme     --- 重置补全菜单的边框线条主题"
+          "   psc reset menu line_theme     --- 重置模块补全菜单的边框线条主题"
         ]
       },
       "order": {
