--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -180,7 +180,7 @@
             "Current Value: {{ $PSCompletions.language }}",
             "Get or set the language of completions.",
             "The language will affect all added completions unless you set a language for one of them by running 'psc completion xxx'.",
-            "Refer to: https://github.com/abgox/PSCompletions/blob/main/README.md#about-language"
+            "Refer to: https://pscompletions.abgox.com/faq/language"
           ],
           "next": [
             {
@@ -270,7 +270,7 @@
         {
           "name": "color_theme",
           "tip": [
-            "Toggle the built-in color theme of the completion menu.",
+            "Toggle the built-in color theme of the module completion menu.",
             "You can also customize it by running 'psc menu custom color'",
             "{{ $info.menu.color_theme.example }}"
           ],
@@ -380,14 +380,14 @@
               "name": "enable_enter_when_single",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_enter_when_single }} (Default: 0)",
-                "When there is only one completion item, whether to enter it directly instead of displaying the completion menu."
+                "When there is only one completion item, whether to enter it directly instead of displaying the module completion menu."
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "Set to 0 (Default)",
-                    "Even if there is only one completion item, the menu is displayed first.",
+                    "Even if there is only one completion item, the module completion menu is displayed first.",
                     "You can press the Tab or Space key again to enter the completion item."
                   ]
                 },
@@ -395,7 +395,7 @@
                   "name": "1",
                   "tip": [
                     "Set to 1",
-                    "When there is only one completion item, it will be entered directly."
+                    "When there is only one completion item, it will be entered directly without displaying the module completion menu."
                   ]
                 }
               ]
@@ -427,7 +427,7 @@
               "name": "enable_list_follow_cursor",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_list_follow_cursor }} (Default: 1)",
-                "Set whether the completion list is displayed following the input cursor.",
+                "Set whether the module completion menu list is displayed following the input cursor.",
                 "If 'enable_list_full_width' is 1, it is invalid."
               ],
               "next": [
@@ -451,7 +451,7 @@
               "name": "enable_list_full_width",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_list_full_width }} (Default: 1)",
-                "Set whether the completion menu list is displayed with a full width.",
+                "Set whether the module completion menu list is displayed with a full width.",
                 "Enable it, the performance of the completion menu will be better."
               ],
               "next": [
@@ -459,14 +459,14 @@
                   "name": "0",
                   "tip": [
                     "Set to 0",
-                    "It means to display the completion menu list without a full width."
+                    "It means to display the module completion menu list without a full width."
                   ]
                 },
                 {
                   "name": "1",
                   "tip": [
                     "Set to 1 (Default)",
-                    "It means to display the completion menu list with a full width.",
+                    "It means to display the module completion menu list with a full width.",
                     "Enable it, the performance of the completion menu will be better."
                   ]
                 }
@@ -476,21 +476,21 @@
               "name": "enable_list_loop",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_list_loop }} (Default: 1)",
-                "Set whether the menu list is displayed with a loop."
+                "Set whether the module completion menu list is displayed with a loop."
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "Set to 0",
-                    "It means to display the completion menu list without a loop."
+                    "It means to display the module completion menu list without a loop."
                   ]
                 },
                 {
                   "name": "1",
                   "tip": [
                     "Set to 1 (Default)",
-                    "It means to display the completion menu list with a loop."
+                    "It means to display the module completion menu list with a loop."
                   ]
                 }
               ]
@@ -499,7 +499,7 @@
               "name": "enable_menu",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_menu }} (Default: 1)",
-                "Set whether to use the completion menu provided by the PSCompletions module.",
+                "Set whether to use the module completion menu provided by the PSCompletions module.",
                 "If you are not using PowerShell (pwsh) on a Windows system, it's invalid."
               ],
               "next": [
@@ -514,7 +514,7 @@
                   "name": "1",
                   "tip": [
                     "Set to 1 (Default)",
-                    "Use the completion menu provided by the PSCompletions module."
+                    "Use the module completion menu provided by the PSCompletions module."
                   ]
                 }
               ]
@@ -523,9 +523,8 @@
               "name": "enable_menu_enhance",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_menu_enhance }} (Default: 1)",
-                "Set whether to override PowerShell's built-in completion menu.",
-                "Refer to: https://github.com/abgox/PSCompletions/blob/main/README.md#about-menu-enhance",
-                "          https://gitee.com/abgox/PSCompletions/blob/main/README.md#about-menu-enhance"
+                "Set whether to enhance the function of the module completion menu.",
+                "Refer to: https://pscompletions.abgox.com/faq/menu-enhance"
               ],
               "next": [
                 {
@@ -596,7 +595,7 @@
               "name": "enable_tip_follow_cursor",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.enable_tip_follow_cursor }} (Default: 1)",
-                "Set whether the completion tip is displayed following the input cursor.",
+                "Set whether the module completion menu tip is displayed following the input cursor.",
                 "If 'enable_list_full_width' is 1, it is invalid."
               ],
               "next": [
@@ -643,7 +642,7 @@
               "name": "filter_symbol",
               "tip": [
                 "Current Value: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.filter_symbol) }} (Default: \"[]\")",
-                "Set the symbols on the left and right of the filter area, which is in the top left corner.",
+                "Set the symbols on the left and right of the filter area in the module completion menu, which is in the top left corner.",
                 "It requires two characters."
               ],
               "next": [
@@ -659,7 +658,7 @@
               "name": "height_from_menu_bottom_to_cursor_when_above",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.height_from_menu_bottom_to_cursor_when_above }} (Default: 0)",
-                "Set the distance between the bottom of the menu and the cursor when the completion menu is displayed above.",
+                "Set the distance between the bottom of the module completion menu and the cursor when the module completion menu is displayed above.",
                 "Typically, it is used to skip the prompt line theme (oh-my-posh/starship/...) to avoid differences caused by redrawing."
               ],
               "next": [
@@ -690,7 +689,7 @@
               "name": "height_from_menu_top_to_cursor_when_below",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.height_from_menu_top_to_cursor_when_below }} (Default: 0)",
-                "Set the distance between the top of the menu and the cursor when the completion menu is displayed below."
+                "Set the distance between the top of the module completion menu and the cursor when the module completion menu is displayed below."
               ],
               "next": [
                 {
@@ -720,7 +719,7 @@
               "name": "list_max_count_when_above",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.list_max_count_when_above }} (Default: 0)",
-                "Set the maximum number of completion items to be displayed on the first page when the completion menu is displayed above the cursor.",
+                "Set the maximum number of completion items to be displayed on the first page when the module completion menu is displayed above the cursor.",
                 "If it's 0, it means that it's determined by PSCompletions itself."
               ],
               "next": [
@@ -737,7 +736,7 @@
               "name": "list_max_count_when_below",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.list_max_count_when_below }} (Default: 0)",
-                "Set the maximum number of completion items to be displayed on the first page when the completion menu is displayed below the cursor.",
+                "Set the maximum number of completion items to be displayed on the first page when the module completion menu is displayed below the cursor.",
                 "If it's 0, it means that it's determined by PSCompletions itself."
               ],
               "next": [
@@ -754,7 +753,7 @@
               "name": "list_min_width",
               "tip": [
                 "Current Value: {{ $PSCompletions.config.list_min_width }} (Default: 10)",
-                "Set the minimum width of the completion list area in the completion menu.",
+                "Set the minimum width of the completion list area in the module completion menu.",
                 "If 'enable_list_full_width' is 1, it is invalid."
               ],
               "next": [
@@ -770,7 +769,7 @@
               "name": "status_symbol",
               "tip": [
                 "Current Value: {{ $PSCompletions.wrap_whitespace($PSCompletions.config.status_symbol) }} (Default: \"/\")",
-                "Set the spacer between the current and total count, which is in the bottom left corner."
+                "Set the spacer between the current and total count in the module completion menu, which is in the bottom left corner."
               ],
               "next": [
                 {
@@ -1504,14 +1503,14 @@
         {
           "name": "custom",
           "tip": [
-            "Customize the style of the completion menu.",
+            "Customize the style of the module completion menu.",
             "{{ $info.menu.custom.example }}"
           ],
           "next": [
             {
               "name": "color",
               "tip": [
-                "Color-related custom configurations.",
+                "Color-related custom configurations for the module completion menu.",
                 "{{ $info.example.menu_custom_color }}"
               ],
               "next": [
@@ -1576,7 +1575,7 @@
             {
               "name": "line",
               "tip": [
-                "Line-related custom configurations."
+                "Line-related custom configurations for the module completion menu."
               ],
               "next": [
                 {
@@ -1796,7 +1795,7 @@
         {
           "name": "line_theme",
           "tip": [
-            "Toggle the built-in border style theme of the completion menu.",
+            "Toggle the built-in border style theme of the module completion menu.",
             "You can also customize it by running 'psc menu custom line'",
             "{{ $info.menu.line_theme.example }}"
           ],
@@ -1878,10 +1877,10 @@
         {
           "name": "symbol",
           "tip": [
-            "Set some special symbols(~?!) in the completion tip.",
+            "Set completion predict symbol(~?!) in the completion tip.",
             "They only exist in completions added via `psc add`.",
             "They are used to let you know if you can continue to get completions.",
-            "For detail: https://pscompletions.abgox.com/command/#menu-symbol"
+            "For detail: https://pscompletions.abgox.com/faq/completion-predict-symbol"
           ],
           "next": [
             {
@@ -2029,7 +2028,7 @@
             {
               "name": "color",
               "tip": [
-                "Rest the color-related configurations of the completion menu.",
+                "Rest the color-related configurations of the module completion menu.",
                 "Include all configuration items under the command ('psc menu custom color')."
               ]
             },
@@ -2043,7 +2042,7 @@
             {
               "name": "line",
               "tip": [
-                "Rest the line-related configurations of the completion menu.",
+                "Rest the line-related configurations of the module completion menu.",
                 "Include all configuration items under the command ('psc menu custom line')."
               ]
             },
@@ -2379,7 +2378,7 @@
       "\n",
       "Enter <@Magenta>psc<@Cyan>, press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key, you will quickly learn all usages by reading the completion tip.\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> has a more powerful completion menu. <@Yellow>(Currently only available on Windows)<@Cyan>\n",
+      "<@Blue>PSCompletions<@Cyan> provides a scrollable module completion menu. <@Yellow>(Currently only available on Windows)<@Cyan>\n",
       "  - You can enter characters to filter, and three matching symbols are supported:\n",
       "    - <@Magenta>^<@Cyan>: Match the beginning.\n",
       "    - <@Magenta>?<@Cyan>: Match any single character.\n",
@@ -2388,7 +2387,7 @@
       "    - Apply the selected completion item: <@Magenta>Enter<@Cyan> | <@Magenta>Space<@Cyan>\n",
       "        - You can also use <@Magenta>Tab<@Cyan> when there's only one completion.\n",
       "    - Delete filter characters: <@Magenta>Backspace<@Cyan>\n",
-      "    - Exit the completion menu: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
+      "    - Exit the module completion menu: <@Magenta>Esc<@Cyan> | <@Magenta>Ctrl + c<@Cyan>\n",
       "        - You can also use <@Magenta>Backspace<@Cyan> when there're no characters in the filter area.\n",
       "    - Select previous completion item:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
       "    - Select   next   completion item: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
@@ -2416,7 +2415,7 @@
         "<@Yellow>Alias <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> already exists, please handle alias conflicts manually."
       ],
       "deny_change_menu_line_style": [
-        "<@Red>In Windows PowerShell 5.1, due to its rendering issues, the border line style of the completion menu cannot be modified.\n",
+        "<@Red>In Windows PowerShell 5.1, due to its rendering issues, the border line style of the module completion menu cannot be modified.\n",
         "It is recommended to use PowerShell (pwsh) as it does not have such restrictions."
       ],
       "has_wildcard": [
@@ -2460,7 +2459,7 @@
         "example": [
           "E: psc menu config enable_enter_when_single 1     --- Auto-apply when there's only one completion item\n",
           "   psc menu config enable_tip 0                   --- Hide completion tip\n",
-          "   psc menu config enable_menu 0                  --- Disable completion menu provided by PSCompletions module\n",
+          "   psc menu config enable_menu 0                  --- Disable the module completion menu\n",
           "   psc menu config filter_symbol []               --- Set the symbol of the filter area"
         ]
       },
@@ -2599,7 +2598,7 @@
         "example": [
           "E: psc reset menu *              --- Reset all menu configurations\n",
           "   psc reset menu config         --- Reset menu configurations\n",
-          "   psc reset menu line_theme     --- Reset menu border line style"
+          "   psc reset menu line_theme     --- Reset border line style of the module completion menu"
         ]
       },
       "order": {
