feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2441,7 +2441,7 @@
     "menu": {
       "color_theme": {
         "done": [
-          "<@Green>Completion menu color style modified successfully!"
+          "<@Green>The color style of the module completion menu modified successfully!"
         ],
         "example": [
           "E: psc menu color_theme default      --- Default theme\n",
@@ -2459,8 +2459,7 @@
         "example": [
           "E: psc menu config enable_enter_when_single 1     --- Auto-apply when there's only one completion item\n",
           "   psc menu config enable_tip 0                   --- Hide completion tip\n",
-          "   psc menu config enable_menu 0                  --- Disable the module completion menu\n",
-          "   psc menu config filter_symbol []               --- Set the symbol of the filter area"
+          "   psc menu config enable_menu 0                  --- Disable the module completion menu"
         ]
       },
       "custom": {
@@ -2480,7 +2479,7 @@
         "E: psc menu config enable_enter_when_single 1       --- Auto-apply when there's only one completion item\n",
         "   psc menu config enable_tip 0                     --- Hide completion tip\n",
         "   psc menu symbol SpaceTab \"\"                      --- Hide symbol\n",
-        "   psc menu line_theme single_line_round_border     --- Toggle the built-in border style theme"
+        "   psc menu line_theme single_line_round_border     --- Toggle the built-in border style theme of the module completion menu"
       ],
       "line_theme": {
         "done": [
