--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2435,7 +2435,7 @@
     "menu": {
       "color_theme": {
         "done": [
-          "<@Green>menu 颜色样式主题修改成功!"
+          "<@Green>模块补全菜单的颜色样式主题修改成功!"
         ],
         "example": [
           "E: psc menu color_theme default      --- 默认主题\n",
@@ -2453,8 +2453,7 @@
         "example": [
           "E: psc menu config enable_enter_when_single 1     --- 只有一个补全项时自动应用\n",
           "   psc menu config enable_tip 0                   --- 不显示补全提示信息\n",
-          "   psc menu config enable_menu 0                  --- 禁用模块补全菜单\n",
-          "   psc menu config filter_symbol []               --- 设置过滤区域(左上角), 左侧和右侧的符号, 默认为 []"
+          "   psc menu config enable_menu 0                  --- 禁用模块补全菜单"
         ]
       },
       "custom": {
@@ -2474,7 +2473,7 @@
         "E: psc menu config enable_enter_when_single 1       --- 只有一个补全项时自动应用\n",
         "   psc menu config enable_tip 0                     --- 不显示补全提示信息\n",
         "   psc menu symbol SpaceTab \"\"                      --- 隐藏符号\n",
-        "   psc menu line_theme single_line_round_border     --- 切换内置的边框线条主题"
+        "   psc menu line_theme single_line_round_border     --- 切换模块补全菜单的内置边框线条主题"
       ],
       "line_theme": {
         "done": [
