feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -2378,7 +2378,7 @@
       "\n",
       "Enter <@Magenta>psc<@Cyan>, press <@Magenta>Space<@Cyan> and <@Magenta>Tab<@Cyan> key, you will quickly learn all usages by reading the completion tip.\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> provides a scrollable module completion menu. <@Yellow>(Currently only available on Windows)<@Cyan>\n",
+      "<@Blue>PSCompletions<@Cyan> provides a powerful module completion menu. <@Yellow>(Currently only available on Windows)<@Cyan>\n",
       "  - You can enter characters to filter, and three matching symbols are supported:\n",
       "    - <@Magenta>^<@Cyan>: Match the beginning.\n",
       "    - <@Magenta>?<@Cyan>: Match any single character.\n",
@@ -2392,7 +2392,7 @@
       "    - Select previous completion item:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
       "    - Select   next   completion item: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> will take up two global names. <@Yellow>You can't modify or override them.<@Cyan>\n",
+      "<@Blue>PSCompletions<@Cyan> will take up two global names. <@Yellow>They should be read-only, and you should not modify or override them.<@Cyan>\n",
       "  <@Magenta>PSCompletions<@Cyan>: A function name. The core function of the module export. <@Magenta>psc<@Cyan> is its alias.\n",
       " <@Magenta>$PSCompletions<@Cyan>: A variable name. Save all data related to the module.\n",
       "\n",
@@ -2492,12 +2492,6 @@
         ]
       },
       "symbol": {
-        "err": {
-          "max": [
-            "<@Yellow>",
-            "{{ $arg[2] }} just need a value. It can be any symbol you like."
-          ]
-        },
         "example": [
           "E: psc menu symbol SpaceTab ~\n",
           "   psc menu symbol OptionTab ?\n",
