--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -2372,7 +2372,7 @@
       "\n",
       "输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> 提供了一个可滚动的模块补全菜单 <@Yellow>(目前仅 Windows 可用)<@Cyan>\n",
+      "<@Blue>PSCompletions<@Cyan> 提供了一个强大的模块补全菜单 <@Yellow>(目前仅 Windows 可用)<@Cyan>\n",
       "  - 在模块补全菜单中，你可以输入字符进行过滤，支持三个匹配符:\n",
       "    - <@Magenta>^<@Cyan>: 匹配开头\n",
       "    - <@Magenta>?<@Cyan>: 匹配一个任意字符\n",
@@ -2386,7 +2386,7 @@
       "    - 选择上一个补全项:  <@Magenta>Up<@Cyan>  | <@Magenta>Left<@Cyan>  | <@Magenta>Shift + Tab<@Cyan> | <@Magenta>Ctrl + u<@Cyan> | <@Magenta>Ctrl + p<@Cyan> | <@Magenta>Ctrl + k<@Cyan>\n",
       "    - 选择下一个补全项: <@Magenta>Down<@Cyan> | <@Magenta>Right<@Cyan> |     <@Magenta>Tab<@Cyan>     | <@Magenta>Ctrl + d<@Cyan> | <@Magenta>Ctrl + n<@Cyan> | <@Magenta>Ctrl + j<@Cyan>\n",
       "\n",
-      "<@Blue>PSCompletions<@Cyan> 模块只会占用两个全局命名，<@Yellow>你不能修改或覆盖它们<@Cyan>\n",
+      "<@Blue>PSCompletions<@Cyan> 模块只会占用两个全局命名，<@Yellow>它们应该是只读的，不应该修改或覆盖它们<@Cyan>\n",
       "  <@Magenta>PSCompletions<@Cyan>: 函数名, 模块导出的核心函数，<@Magenta>psc<@Cyan> 是它的别名\n",
       " <@Magenta>$PSCompletions<@Cyan>: 变量名, 存储模块的相关数据\n",
       "\n",
@@ -2486,12 +2486,6 @@
         ]
       },
       "symbol": {
-        "err": {
-          "max": [
-            "<@Yellow>",
-            "{{ $arg[2] }} 配置项只需要一个值, 可以是你喜欢的符号"
-          ]
-        },
         "example": [
           "E: psc menu symbol SpaceTab ~        --- 设置符号为 ~\n",
           "   psc menu symbol OptionTab ?       --- 设置符号为 ?\n",
